# zkfwdbld

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  README.md  agent.lua  build_wasm.sh  consolidate_baselines.mjs  cutover.mjs  debug_spawn.js  deploy.js  deploy_paxiom.js  deploy_seer.js  direct_spawn.js  generate_sat.py  goldilocks.py  hb_spawn.js  hb_spawn.mjs  hb_spawn_direct.mjs  monitor_vitals.py  package-lock.json  package.json  projection_benchmarks.py  simulate_memory.py  spawn_seer.js  time_to_proof.py  validation_script.py
Heuristics/: Darpa_Targeting_Benchmark_Patched.ipynb  Gohst_Benchmarking_Notebook.ipynb  QRCL_Memory_Benchmark_Final.ipynb  QRCL_Memory_Benchmark_Static_Phase_Correction.ipynb  Symbolic_Curvature_Solvers.ipynb  site_config.json  symbolic_tsp_pipeline_fixed.ipynb  test_vector_1.cnf
app/: generate_packet_json.mjs  packet_snapshot.mjs  server.mjs
docs/: agent_trust_positioning.md  app_surface.md  market_positioning.md  mvp_adapter_layer.md  mvp_verified_findings.md  next_build_decision.md  proof_contract.md  second_action_family.md
examples/: adapter_demo.mjs  build_polsia_packet.mjs  export_harness_reports.mjs  export_message_reports.mjs  export_scanner_reports.mjs  harness_report.mjs  harness_to_artifact.mjs  ingest_message_drafts.mjs  message_actions.mjs  prepare_ops_sandbox.mjs  prove_request.rs  prover_scaling.rs  run_ops_loop.mjs  scanner_report.mjs  scanner_to_artifact.mjs
experiments/: README.md  prover_scaling_2026-04-26.csv
harness/: phase0_form_workflow.html  serve_harness.mjs
seer_eval/: adapters.mjs  audit.mjs  classify.mjs  (+14 more)
(+16 files in other folders)
